--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-  "name": "vue3-test",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.40",
-    "vue": "^3.0.5",
-    "vue-router": "4",
-    "vuex": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.41",
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/compiler-sfc": "^3.0.5",
-    "typescript": "^4.1.3",
-    "vite": "^2.1.5",
-    "vue-tsc": "^0.0.24"
-  }
+    "name": "vue3-test",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "serve": "vite preview",
+        "fix": "eslint --fix",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "*.{vue,js,ts}": "eslint --fix"
+    },
+    "dependencies": {
+        "axios": "^0.21.1",
+        "element-plus": "^1.0.2-beta.40",
+        "vue": "^3.0.5",
+        "vue-router": "4",
+        "vuex": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.41",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
+        "@vitejs/plugin-vue": "^1.2.1",
+        "@vue/compiler-sfc": "^3.0.5",
+        "commitizen": "^4.2.3",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^7.24.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-vue": "^7.9.0",
+        "husky": "^6.0.0",
+        "lint-staged": "^10.5.4",
+        "sass": "^1.32.11",
+        "typescript": "^4.1.3",
+        "vite": "^2.1.5",
+        "vue-tsc": "^0.0.24"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    }
 }
