--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
         "serve": "vite preview",
-        "fix": "eslint --fix",
+        "lint": "eslint src/*",
         "prepare": "husky install"
     },
     "lint-staged": {
