--- a/.github/workflows/vue3.yml
+++ b/.github/workflows/vue3.yml
@@ -17,5 +17,5 @@ jobs:
         run: yarn -v && yarn
 
       - name: lint
-        run: ls -a
+        run: eslint . --ext .js,.jsx,.ts,.tsx
 #         run: yarn lint
