--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
         "serve": "vite preview",
-        "lint": "eslint ./src/*",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "prepare": "husky install"
     },
     "lint-staged": {
