--- a/.github/workflows/vue3.yml
+++ b/.github/workflows/vue3.yml
@@ -17,5 +17,4 @@ jobs:
         run: yarn -v && yarn
 
       - name: lint
-        run: yarn eslint . --ext .js,.jsx,.ts,.tsx
-#         run: yarn lint
+        run: yarn lint
