refactor(global): rm element plus package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
         "src/**/*.tsx",
         "src/**/*.vue"
     ],
+    "isolatedModules": true,
     "files": [
         "src/main.ts",
     ]
