--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc --noEmit && vite build",
-        "serve": "vite preview",
+        "build": "vite build",
+        "serve": "vue-tsc --noEmit && vite preview",
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
         "prepare": "husky install"
     },
@@ -12,12 +12,12 @@
         "*.{vue,js,ts}": "eslint --fix"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^1.2.1",
         "axios": "^0.21.1",
-        "element-plus": "^1.0.2-beta.40",
+        "less": "^4.1.1",
+        "vite": "^2.1.5",
         "vue": "^3.0.5",
         "vue-router": "4",
-        "vite": "^2.1.5",
-        "@vitejs/plugin-vue": "^1.2.1",
         "vuex": "^4.0.0"
     },
     "devDependencies": {
@@ -34,7 +34,6 @@
         "eslint-plugin-vue": "^7.9.0",
         "husky": "^6.0.0",
         "lint-staged": "^10.5.4",
-        "sass": "^1.32.11",
         "typescript": "^4.1.3",
         "vue-tsc": "^0.0.24"
     },
