--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
         "eslint-import-resolver-alias": "^1.1.2",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-vue": "^7.9.0",
-        "husky": "^6.0.0",
+        "husky": "^7.0.1",
         "lint-staged": "^10.5.4",
         "typescript": "^4.1.3",
         "vue-tsc": "^0.0.24"
     },
     "config": {
         "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
+            "path": "cz-conventional-changelog"
         }
     }
 }
