--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "*.{vue,js,ts}": "eslint --fix"
     },
     "dependencies": {
+        "@babel/types": "^7.16.8",
         "@vitejs/plugin-vue": "^1.2.1",
         "axios": "^0.21.1",
         "less": "^4.1.1",
