--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "serve": "vue-tsc --noEmit && vite preview",
+        "serve": "vue-tsc --noEmit && vite serve",
         "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
         "prepare": "husky install"
     },
